fixed spacing

--- a/styles/partials/_img-gallery.scss
+++ b/styles/partials/_img-gallery.scss
@@ -26,6 +26,7 @@
 .gallery__title{
     margin-left: 2rem;
     font-size: 3.25rem; 
+    font-weight: 600;
    }
 }
 
