--- a/styles/partials/_text.scss
+++ b/styles/partials/_text.scss
@@ -51,6 +51,7 @@
 @include tablet {
     .content__text{
         font-size: 2rem;
+        line-height: 30px;
         font-weight: 600;
     }
 }
